linalg.matmul -> linalg.mmt4d

--- a/iree/compiler/Dialect/Flow/Transforms/BUILD
+++ b/iree/compiler/Dialect/Flow/Transforms/BUILD
@@ -45,6 +45,7 @@ cc_library(
         "InjectDispatchTracing.cpp",
         "OutlineDispatchRegions.cpp",
         "OutlineLargeConstants.cpp",
+        "MamulToMMT4DConversion.cpp",
         "PadLinalgOps.cpp",
         "PadTensorToSubTensorInsert.cpp",
         "PassDetail.h",
