--- a/iree/hal/drivers/CMakeLists.txt
+++ b/iree/hal/drivers/CMakeLists.txt
@@ -17,6 +17,9 @@ set(IREE_HAL_DRIVER_MODULES)
 if(${IREE_HAL_DRIVER_CUDA})
   list(APPEND IREE_HAL_DRIVER_MODULES iree::hal::cuda::registration)
 endif()
+if(${IREE_HAL_DRIVER_HAMMERBLADE})
+    list(APPEND IREE_HAL_DRIVER_MODULES iree::hal::hammerblade::registration)
+endif()
 if(${IREE_HAL_DRIVER_DYLIB})
   list(APPEND IREE_HAL_DRIVER_MODULES iree::hal::dylib::registration)
   # TODO(benvanik): add a IREE_HAL_DRIVER_DYLIB_SYNC or global flag.
