--- a/iree/schemas/CMakeLists.txt
+++ b/iree/schemas/CMakeLists.txt
@@ -38,6 +38,19 @@ flatbuffer_c_library(
 
 flatbuffer_c_library(
   NAME
+    hammerblade_executable_def_c_fbs
+  SRCS
+    "hammerblade_executable_def.fbs"
+  FLATCC_ARGS
+    "--reader"
+    "--builder"
+    "--verifier"
+    "--json"
+  PUBLIC
+)
+
+flatbuffer_c_library(
+  NAME
     rocm_executable_def_c_fbs
   SRCS
     "rocm_executable_def.fbs"
