Make the subtraction test have dynamic shape

--- a/iree/samples/rv_kernels/riscv_sub/CMakeLists.txt
+++ b/iree/samples/rv_kernels/riscv_sub/CMakeLists.txt
@@ -21,6 +21,8 @@ list(APPEND _TRANSLATE_ARGS "-iree-llvm-target-abi=lp64d")
 list(APPEND _TRANSLATE_ARGS "-iree-llvm-target-cpu-features=+m,+a,+f,+d,+c,+experimental-v")
 list(APPEND _TRANSLATE_ARGS "-riscv-v-vector-bits-min=256")
 list(APPEND _TRANSLATE_ARGS "-riscv-v-fixed-length-vector-lmul-max=8")
+list(APPEND _TRANSLATE_ARGS "-riscv-v-register-bit-width-lmul=8")
+list(APPEND _TRANSLATE_ARGS "-force-vector-width=64")
 list(APPEND _TRANSLATE_ARGS "--iree-llvm-loop-vectorization")
 list(APPEND _TRANSLATE_ARGS "--iree-llvm-slp-vectorization")
 list(APPEND _TRANSLATE_ARGS "--vectorize-slp")
